logica de codigo para MVVM

--- a/espinosaprogreso3/espinosaprogreso3.csproj
+++ b/espinosaprogreso3/espinosaprogreso3.csproj
@@ -66,6 +66,9 @@
 	  <MauiXaml Update="Views\FormularioPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\ListaPrendaPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
